--- a/src/http/views/partials/filter.hbs
+++ b/src/http/views/partials/filter.hbs
@@ -10,8 +10,8 @@
                     stroke-linecap="round" />
             </svg>
         </span>
-        <input type="text" id="filter" name="filter" value="{{filter.searchTerm}}" placeholder="Filter..." autocomplete="off"
-            class="filter-input" />
+        <input type="text" id="filter" name="filter" value="{{filter.searchTerm}}" placeholder="Filter..."
+            autocomplete="off" class="filter-input" />
         <button type="button" id="clear-filter-btn" class="absolute right-3 top-1/2 -translate-y-1/2 z-10 p-1 bg-white transition-colors duration-150
                    text-gray-400 hover:text-teal-600 focus:outline-none"
             style="display: {{#if filter}}inline{{else}}none{{/if}};" aria-label="Clear filter">&#10005;</button>
