--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -1,4 +1,5 @@
 <div class="w-full mx-auto">
+    {{! TODO: add button to show All/Normal sets}}
     {{>filter}}
     <table class="min-w-full bg-white">
         <thead>{{>tableHeadersRow}}</thead>
